--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="group">
           <div class="item">
             <img
-              src="/images/profile-picture.jpg"
+              src="images/profile-picture.jpg"
               alt="My profile Picture"
               class="picture"
             />
@@ -53,7 +53,7 @@
               going through the Thinkful engineering course. I'm in Cincinnati,
               OH.
               <img
-                src="/images/cincinnati-map.jpg"
+                src="images/cincinnati-map.jpg"
                 alt="Cincinnati Map"
                 class="picture"
               />
@@ -151,7 +151,7 @@
           </div>
           <div class="item">
             <img
-              src="/images/placeholder.jpg"
+              src="images/placeholder.jpg"
               alt="Placeholder Image"
               class="picture"
             />
